fix z-index layering

--- a/Client/src/components/Into/intro.css
+++ b/Client/src/components/Into/intro.css
@@ -14,6 +14,7 @@
     top: 0;
     left: 0;
     opacity: 0.95;
+z-index: 0;
 }
 
 .intro-bg-img img {
